# forrt-bibliography

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml  update.yml
data/: clusters.yaml  contributors.csv
scripts/: build_clusters.py  build_site.py  evaluate_llm_classifier.py  fetch_contributors.py  fetch_openalex.py  smoke_test.py
site/: index.html  keywords.html
site/css/: style.css
site/data/: clusters.json  contributors.json  keywords.json  meta.json  network.json  stats.json  works.json
site/js/: app.js
